# indic-numtowords

./: cloudbuild.yaml  pyproject.toml  setup.py
indic_numtowords/: numtowords.py
indic_numtowords/ben/: cardinal.py
indic_numtowords/guj/: cardinal.py
indic_numtowords/hin/: cardinal.py
indic_numtowords/kan/: cardinal.py
indic_numtowords/kan/data/: nums.py
indic_numtowords/mal/: cardinal.py
indic_numtowords/mar/: cardinal.py
indic_numtowords/ori/: cardinal.py
indic_numtowords/pun/: cardinal.py
indic_numtowords/tam/: cardinal.py
indic_numtowords/tel/: cardinal.py
indic_numtowords/tests/: simple_test.py
